--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "tailwind": "^4.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
