--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "sudo": "^1.0.3",
     "tailwind": "^4.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
